# cpp-native-mobile

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cxx-check.yml  cxx.yml  java.yml  kotlin.yml  swift.yml  wasm.yml
cxx/include/: type-wrapper.hpp
cxx/src/: lib.cpp  main.cpp
kotlin/app/: build.gradle
kotlin/app/src/main/kotlin/application/: App.kt  MyClass.kt  Product.kt
kotlin/app/src/test/kotlin/app/: AppTest.kt
swift/: main.swift
